--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
             .loser{
                 color: red;
             }
+            .mid{
+                margin-top: 43px;
+            }
         </style>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <div class="container">
+        <div class="container mid">
             <div class="columns">
                 <div class="column is-half is-offset-one-quarter">
                     <div class="card">
